핫 스코어 시간 상수를 관리자 API로 변경 — PUT /admin/hot-score/{domain}: Redis 저장 후 즉시 전체 재계산
- HotScoreConfigService: Redis(hot-score:time-divisor:*) 우선, yml 기본값 폴백. 파드 간 30초 주기 동기화
- HotScoreAdminController: GET 현재값(초·일·기본값·변경 여부), PUT 상수 변경 + 그 도메인 전체 재계산
- 트렌딩 스냅샷 스케줄러와 UPDATE 3종 삭제 (Reddit식 전환으로 불필요), 배틀 마감 알림은 cron 유지
- /admin/schedulers 는 전체 재계산 3개만 노출