@@ -7,8 +7,6 @@ import com.example.toycontent.app.common.response.ApiResponse;
 import com.example.toycontent.app.battle.service.BattleHotScoreService;
 import com.example.toycontent.app.feed.service.FeedHotScoreService;
 import com.example.toycontent.app.product.service.ProductPopularityService;
-import com.example.toycontent.app.scheduler.BattleDeadlineNotificationScheduler;
-import com.example.toycontent.app.scheduler.FeedTrendingScheduler;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import java.time.LocalDateTime;
@@ -25,16 +23,13 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 /**
- * 배치 작업 수동 실행 (ADMIN 전용).
+ * 핫 스코어 전체 재계산 (ADMIN 전용).
  *
  * <p>핫 스코어(피드·배틀·제품)는 참여가 생기는 행에서 바로 갱신되므로 정기 배치가 없다.
- * 여기의 {@code *.recalculate}는 시간 상수({@code hot-score.*-time-divisor-seconds})를 바꾼 뒤
- * 저장된 점수를 새 기준으로 맞출 때 한 번 돌리는 도구다.</p>
- *
- * <p>트렌딩 스냅샷·배틀 마감 알림은 cron 스케줄러 빈을 그대로 호출하므로 {@code @SchedulerLock}이
- * 동일하게 적용된다. 락이 잡혀 있으면 본문이 건너뛰어지고 즉시 반환된다.</p>
+ * 이 API는 시간 상수({@code hot-score.*-time-divisor-seconds})를 바꾼 뒤 저장된 점수를
+ * 새 기준으로 맞출 때 한 번 돌리는 도구다. 배포 직후 옛 공식 점수를 새 척도로 바꿀 때도 쓴다.</p>
  */
-@Tag(name = "SchedulerAdminController", description = "배치 작업 수동 실행 (ADMIN 전용)")
+@Tag(name = "SchedulerAdminController", description = "핫 스코어 전체 재계산 (ADMIN 전용)")
 @RestController
 @Slf4j
 @RequestMapping("/admin/schedulers")
@@ -44,28 +39,23 @@ public class SchedulerAdminController {
 
   public SchedulerAdminController(FeedHotScoreService feedHotScore,
                                   BattleHotScoreService battleHotScore,
-                                  ProductPopularityService productPopularity,
-                                  FeedTrendingScheduler feedTrending,
-                                  BattleDeadlineNotificationScheduler battleDeadline) {
+                                  ProductPopularityService productPopularity) {
     Map<String, Runnable> map = new LinkedHashMap<>();
-    map.put("feed-hot-score.recalculate", feedHotScore::recalculateAll);          // 상수 변경 후 1회
-    map.put("battle-hot-score.recalculate", battleHotScore::recalculateAll);      // 상수 변경 후 1회
-    map.put("product-popularity.recalculate", productPopularity::recalculateAll); // 상수 변경 후 1회
-    map.put("feed-trending", feedTrending::updateTrendingAndSnapshot);            // 매일 00:15
-    map.put("battle-deadline.d7", battleDeadline::notifyD7);                      // 매 정각
-    map.put("battle-deadline.end", battleDeadline::notifyEnd);                    // 매 분
-    this.jobs = Map.copyOf(map);
+    map.put("feed-hot-score.recalculate", feedHotScore::recalculateAll);          // 피드 · 상수 14일
+    map.put("battle-hot-score.recalculate", battleHotScore::recalculateAll);      // 배틀 · 상수 30일
+    map.put("product-popularity.recalculate", productPopularity::recalculateAll); // 제품 · 상수 30일
+    this.jobs = java.util.Collections.unmodifiableMap(map); // 등록 순서 유지
   }
 
-  @Operation(summary = "수동 실행 가능한 스케줄러 작업 목록")
+  @Operation(summary = "전체 재계산 작업 목록")
   @GetMapping
   public ResponseEntity<ApiResponse<List<String>>> list(@CurrentUserIsAdmin boolean isAdmin) {
     requireAdmin(isAdmin);
     return ResponseEntity.ok(ApiResponse.success(List.copyOf(jobs.keySet())));
   }
 
-  @Operation(summary = "스케줄러 작업 즉시 실행",
-      description = "동기로 실행하고 소요 시간을 돌려준다. *.recalculate는 시간 상수 변경 후에만 쓴다. cron 작업은 ShedLock이 잡혀 있으면 본문이 건너뛰어져 elapsedMs가 수 ms로 나온다.")
+  @Operation(summary = "전체 재계산 즉시 실행",
+      description = "동기로 실행하고 소요 시간을 돌려준다. 시간 상수 변경 후 또는 배포 직후에만 쓴다.")
   @PostMapping("/{job}")
   public ResponseEntity<ApiResponse<RunResult>> run(@PathVariable String job,
                                                     @CurrentUserIsAdmin boolean isAdmin) {
@@ -93,10 +83,7 @@ public class SchedulerAdminController {
     }
   }
 
-  /**
-   * @param elapsedMs 컨트롤러가 잰 벽시계 시간. 스케줄러 자체 로그의 ms와 거의 같다.
-   *                  ShedLock에 걸려 건너뛰었으면 수 ms로 나온다.
-   */
+  /** @param elapsedMs 컨트롤러가 잰 벽시계 시간. 서비스 로그의 ms와 거의 같다. */
   public record RunResult(String job, LocalDateTime startedAt, long elapsedMs) {
   }
 }
